<resources>
    <string name="app_name">B38FirebaseDemo</string>\
    <string name="login_here">Login here...</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_here">Register here...</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_mobile_num">Enter mobile number</string>
    <string name="send_otp">Sned OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sender">Facebook</string>
    <string name="global_warming">Global warming increasing day by day</string>
    <string name="time">10:40 AM</string>
    <string name="email_list">Email listing screen</string>
    <string name="chatting_list">Chatting list screen</string>
    <string name="grid_list">Grid design</string>
    <string name="hey">Hey how are you?</string>
    <string name="delete">Delete</string>
    <string name="gmail">Gmail list screen</string>
    <string name="whatsapp">Chatitng like whatsapp</string>
    <string name="grid">notes app like grid</string>
    <string name="enter_message">Enter message</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="add_note">Add note</string>
</resources>