<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#F8F4F4"
    tools:context=".authentication.PhoneRegisterActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:hint="@string/enter_mobile_num"
        android:inputType="textPassword"
        android:textColor="#130000"
        android:textColorHint="#670404"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#D61D1D"
        android:fontFamily="monospace"
        android:hint="@string/enter_email"
        android:text="@string/send_otp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/edtMobile" />

</androidx.constraintlayout.widget.ConstraintLayout>