<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".realtimedb.notes.NotesActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_message_shape"
        android:hint="@string/enter_title"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtDesc"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_message_shape"
        android:hint="@string/enter_description"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

    <Button
        android:id="@+id/btnAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_note"
        app:layout_constraintTop_toBottomOf="@+id/edtDesc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddNote"
        tools:itemCount="3" />


</androidx.constraintlayout.widget.ConstraintLayout>