<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="#F8C4B7"
    android:padding="10dp">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/loginRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="cursive"
            android:text="@string/login"
            android:textColor="#6A0A0A"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/registerRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:fontFamily="cursive"
            android:text="@string/register"
            android:textColor="#073160"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RadioGroup>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:hint="@string/enter_email"
        android:textColor="#130000"
        android:textColorHint="#670404"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#130000"
        android:textColorHint="#670404"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#D61D1D"
        android:fontFamily="monospace"
        android:hint="@string/enter_email"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorColor="#16BC4C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="#B82E2E"
        app:trackCornerRadius="100dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/registerByPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="@+id/signInButton"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerByPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>